[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/ExplosionBullet.gd" type="Script" id=1]

[sub_resource type="PhysicsMaterial" id=14]
friction = 0.7
bounce = 0.7

[sub_resource type="CircleShape2D" id=1]
radius = 7.07107

[sub_resource type="Curve" id=2]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 119.966 ), 0.0, 0.0, 0, 0, Vector2( 1, -128.761 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.483986, 0.850534, 0.989324 )
colors = PoolColorArray( 0.76763, 0.727524, 0.125939, 1, 0.820313, 0.201874, 0.201874, 1, 1, 0, 0, 1, 0.790649, 0.796875, 0, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=6]
max_value = 100.0
_data = [ Vector2( 0, 74.0496 ), 0.0, -196.364, 0, 0, Vector2( 1, 24.9587 ), -276.364, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0.00328947, 0.386513 ), 0.0, 2.76364, 0, 0, Vector2( 0.875, 0.886513 ), -2.86599, -2.86599, 0, 0, Vector2( 1, 0 ), -6.09892, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="Curve" id=10]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, -17.52 ), 0.0, 0.0, 0, 0, Vector2( 1, 11.571 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 7, 0 )
initial_velocity = 450.0
initial_velocity_random = 0.7
angular_velocity_random = 1.0
angular_velocity_curve = SubResource( 3 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 5.0
tangential_accel_random = 1.0
tangential_accel_curve = SubResource( 11 )
damping_random = 1.0
damping_curve = SubResource( 7 )
angle_random = 1.0
scale = 15.0
scale_random = 0.4
scale_curve = SubResource( 9 )
color_ramp = SubResource( 5 )

[sub_resource type="CircleShape2D" id=13]
radius = 24.0

[node name="ExplosionBullet" type="RigidBody2D"]
mass = 15.0
physics_material_override = SubResource( 14 )
gravity_scale = 4.0
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 0, 7, -5, 5, -7, 0, -5, -5, 0, -7, 5, -5, 7, 0, 5, 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="Rays" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="Rays"]
enabled = true

[node name="RayCast2D2" type="RayCast2D" parent="Rays"]
rotation = 0.698132
scale = Vector2( 1, 1 )
enabled = true

[node name="RayCast2D3" type="RayCast2D" parent="Rays"]
rotation = 1.39626
scale = Vector2( 1, 1 )
enabled = true

[node name="RayCast2D4" type="RayCast2D" parent="Rays"]
rotation = 2.0944
enabled = true

[node name="RayCast2D5" type="RayCast2D" parent="Rays"]
rotation = 2.79253
enabled = true

[node name="RayCast2D6" type="RayCast2D" parent="Rays"]
rotation = -2.79253
enabled = true

[node name="RayCast2D7" type="RayCast2D" parent="Rays"]
rotation = -2.09439
enabled = true

[node name="RayCast2D8" type="RayCast2D" parent="Rays"]
rotation = -1.39626
scale = Vector2( 1, 1 )
enabled = true

[node name="RayCast2D9" type="RayCast2D" parent="Rays"]
rotation = -0.698132
enabled = true

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 150
one_shot = true
speed_scale = 1.2
explosiveness = 0.9
local_coords = false
process_material = SubResource( 12 )
__meta__ = {
"_editor_description_": ""
}

[node name="Explosion_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explosion_area"]
shape = SubResource( 13 )

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 2, 2 )

[node name="Free_timer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[connection signal="body_entered" from="Explosion_area" to="." method="_on_Explosion_area_body_entered"]
[connection signal="timeout" from="Free_timer" to="." method="_on_Free_timer_timeout"]
